2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
	* include/functions_events.php
	  operation/events/events_list.php
	  operation/events/events_validate: Allowed post a comment 
	without changing the event's state.

2012-02-10  Miguel de Dios  <miguel.dedios@artica.es>
	
	* * extensions/module_groups.php, include/functions_modules.php,
	godmode/agentes/module_manager_editor_prediction.php: cleaned
	source code style.

	* godmode/agentes/configurar_agente.php: cleaned source code style and fixed
	the duplication of module.
	
	* include/functions_agents.php: fixed the get modules into function
	"agents_get_modules", before the function return ever the policy modules
	without apply filter.
	
	Fixes: #3482260

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_groups.php: Added links to different sections with
        the suitable filters.

2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql: Removed default value of 'value' field to
	tconfig table.

2012-02-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Added type in snmp alert view
	and added None option in trap type filter.

2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql: Removed default value of 'value' field to
	tconfig table.

2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Changed type of 'value'
	to tconfig table.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_modules.php: Changed module status image for unknown
        status to gray.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Added colors in name and group
	at creation time and now update button is showed when a filter is
	created.
